-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.5.0
-
None
-
324de13b4e6703db778010d0682ac26cff359516
List of files, which is opened by Ctrl-Tab in editor, is expected to have history order. However, it seems like it doesn't remember history deeply, for example in my currently opened session I have 16 items ordered correctly, and after them it lists all other open documents in alphabetic order. This gives me very much frustration when navigating through large code base makes Qt Creator to throw file that I'm actually editing at the moment out of recent history.
Seems like it's correlated with document unloading. I currently have 15 documents in "Files to keep open" setting. I think this is not a correct behavior to clear history when unloading documents.
- is duplicated by
-
QTCREATORBUG-19528 List of recently used documents in editor should maintain full history
-
- Closed
-